# Pension_Android

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_alarm_details.xml  activity_family_add.xml  activity_family_detail.xml  activity_family_list.xml  activity_guide.xml  activity_login.xml  activity_main.xml  activity_user_info.xml  fragment_alarm.xml  fragment_device.xml  fragment_home.xml  fragment_main.xml  fragment_mine.xml  imageview_200.xml  photo_choose_dialog.xml  template_device_list.xml  template_family_list.xml  template_single_text.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/res/anim/: in_bottomtotop.xml  out_toptobottom.xml
base/src/main/res/color/: press_selector_font_1.xml
base/src/main/res/drawable/: card_shape.xml  progress_point.xml  shape_corner_5_red.xml
base/src/main/res/layout/: activity_bigimagepager.xml  divider_05.xml  item_big_viewpager.xml  (+1 more)
common/src/main/: AndroidManifest.xml
network/: build.gradle
network/src/main/: AndroidManifest.xml
news/: build.gradle
news/src/main/: AndroidManifest.xml
video/: build.gradle
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: CMakeLists.txt  Log.h  native-lib.cpp
video/src/main/cpp/videoplayer/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  EnjoyPlayer.cpp  EnjoyPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  safe_queue.h
xiangxuewebview/src/main/: AndroidManifest.xml
(+212 files in other folders)
